# salvae

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
crates/salvae-agent/: Cargo.toml
crates/salvae-agent/src/: agent.rs  lib.rs  main.rs  outcome.rs
crates/salvae-config/: Cargo.toml
crates/salvae-config/src/: dpapi.rs  group.rs  invite.rs  lib.rs  secret.rs  store.rs
crates/salvae-config/tests/: config_roundtrip.rs
crates/salvae-core/: Cargo.toml
crates/salvae-core/src/: chunk.rs  cipher.rs  compress.rs  hash.rs  kdf.rs  lib.rs  seal.rs  seed.rs  version.rs
crates/salvae-core/tests/: round_trip.rs
crates/salvae-detect/: Cargo.toml
crates/salvae-detect/assets/: CREDITS-ludusavi.md  ludusavi-manifest.json
crates/salvae-detect/examples/: convert-manifest.rs
crates/salvae-detect/src/: candidate.rs  epic.rs  game.rs  lib.rs  manifest.rs  resolve.rs  roots.rs  snapshot.rs  steam.rs  vdf.rs
crates/salvae-detect/tests/: discovery.rs
crates/salvae-discord/: Cargo.toml  INTEGRATION.md
crates/salvae-discord/src/: discord.rs  discover.rs  lib.rs  parse.rs  retry.rs
crates/salvae-discord/tests/: live_discord.rs
crates/salvae-sync/: Cargo.toml
crates/salvae-sync/examples/: unpack.rs
crates/salvae-sync/src/: engine.rs  lib.rs  marker.rs  pack.rs  state.rs
crates/salvae-sync/tests/: async_remote_sync.rs  sync_roundtrip.rs
crates/salvae-ui/: Cargo.toml  build.rs
crates/salvae-ui/src/: agent_backend.rs  app.rs  backend.rs  command.rs  discovery.rs  icon.rs  lib.rs  main.rs  theme.rs  tray.rs  update.rs  view.rs  viewmodel.rs  worker.rs
crates/salvae-vault/: Cargo.toml
crates/salvae-vault/src/: channel.rs  lib.rs  memory.rs  multipart.rs  ratelimit.rs  record.rs  vault.rs
crates/salvae-vault/tests/: vault_roundtrip.rs
crates/salvae-watch/: Cargo.toml
crates/salvae-watch/src/: detector.rs  lib.rs  process.rs  system.rs
packaging/: installer.iss
scripts/: release.ps1
