[workspace]
resolver = "2"
members = ["crates/salvae-core", "crates/salvae-vault", "crates/salvae-discord", "crates/salvae-config", "crates/salvae-sync", "crates/salvae-detect", "crates/salvae-watch", "crates/salvae-agent", "crates/salvae-ui"]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Gabriel <gabrielfcsxd@gmail.com>"]
