[package]
name = "salvae-config"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Groups, invites, local config and DPAPI secret storage for Salvaê."

[dependencies]
salvae-core = { path = "../salvae-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
base64 = "0.22"
hex = "0.4"
getrandom = "0.2"
thiserror = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Security_Cryptography", "Win32_Foundation"] }

[dev-dependencies]
tempfile = "3"
