[package]
name = "salvae-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Crypto, compression, chunking and version model for Salvaê."

[dependencies]
argon2 = "0.5"
aes-gcm = "0.10"
zstd = "0.13"
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = "0.2"
thiserror = "1"
