[package]
name = "salvae-detect"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Game catalog and save-folder discovery for Salvaê."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
