[package]
name = "salvae-discord"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Live Discord REST transport (Channel impl) for the Salvaê vault."

[dependencies]
salvae-vault = { path = "../salvae-vault" }
ureq = "2"
serde_json = "1"
getrandom = "0.2"

[dev-dependencies]
mockito = "1"
salvae-core = { path = "../salvae-core" }
getrandom = "0.2"
