[package]
name = "salvae-sync"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Sync engine (pull/push, conflict, presence) for Salvaê."

[dependencies]
salvae-core = { path = "../salvae-core" }
salvae-vault = { path = "../salvae-vault" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
