[package]
name = "salvae-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Tray app + desktop UI for Salvaê: group setup, save-folder config, conflict resolution, history/restore."

# The shippable binary is named "Salvae" (produces Salvae.exe).
[[bin]]
name = "Salvae"
path = "src/main.rs"

[dependencies]
salvae-core = { path = "../salvae-core" }
salvae-config = { path = "../salvae-config" }
salvae-sync = { path = "../salvae-sync" }
salvae-detect = { path = "../salvae-detect" }
salvae-watch = { path = "../salvae-watch" }
salvae-vault = { path = "../salvae-vault" }
salvae-discord = { path = "../salvae-discord" }
salvae-agent = { path = "../salvae-agent" }
eframe = { version = "0.29", features = ["persistence"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["svg"] }
rfd = "0.15"
image = { version = "0.25", default-features = false, features = ["png"] }
raw-window-handle = "0.6"
thiserror = "1"
ureq = "2"
blake3 = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[dev-dependencies]
tempfile = "3"
