[package]
name = "salvae-vault"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Encrypted, versioned save vault over a message channel for Salvaê."

[dependencies]
salvae-core = { path = "../salvae-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
