[package]
name = "salvae-watch"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Process watcher and game open/close detector for Salvaê."

[dependencies]
salvae-detect = { path = "../salvae-detect" }
thiserror = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
] }
